# xontrib-cd

./: .copier-answers.yml  Changelog.md  License  Manifest.in  ReadMe.md  pyproject.toml  setup.py
.github/workflows/: python-publish.yml  release.yml  test.yml  zizmor.yml
tests/: test_xontrib.py
xontrib/: cd.xsh
xontrib/cd/: __init__.py  event_hooks.py  helper.py
xontrib_cd/: event_hooks.py  helper.py  main.py
